--- a/src/pages/porady.astro
+++ b/src/pages/porady.astro
@@ -4,8 +4,22 @@ import Layout from '../layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 import Hero from '../components/Hero.astro';
 
+// Add type for porada
+interface Porada {
+    slug: string;
+    data: {
+        title: string;
+        date: string;
+        author: string;
+        excerpt: string;
+        image?: ImageMetadata;
+    };
+}
+
 const porady = await getCollection('porady');
-const sortedPorady = porady.sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
+const sortedPorady = porady.sort((a: Porada, b: Porada) => 
+    new Date(b.data.date).getTime() - new Date(a.data.date).getTime()
+);
 ---
 
 <Layout title="Porady - ANIMALS">
