--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,8 +73,8 @@ import dogImage from '../assets/dog.jpg';
 									<span class="text-2xl">🐾</span>
 								</div>
 								<div>
-									<div class="font-bold text-primary-900">Darmowa dostawa</div>
-									<div class="text-sm text-primary-600">przy zamówieniu >200zł</div>
+									<div class="font-bold text-primary-900">Darmowa porada żywieniowa</div>
+									<div class="text-sm text-primary-600">podczas wizyty w sklepie</div>
 								</div>
 							</div>
 						</div>
