--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title, description } = Astro.props;
                                     class="h-12 w-auto object-contain"
                                 />
                             </div>
-                            <span class="hidden sm:inline text-2xl font-display font-extrabold tracking-wide text-white">
+                            <span class="text-xl sm:text-2xl font-display font-extrabold tracking-wide text-white">
                                 ANIMALS
                             </span>
                         </a>
