--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const { title, description } = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
         <ViewTransitions />
+        <link rel="sitemap" href="/sitemap-index.xml" />
     </head>
     <body class="antialiased">
         <!-- Header/Navbar -->
